B&L QA/objects/BL_Product__c.object
<CustomObject>
    <fields>
        <fullName>Account_Profile__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Profile</label>
        <referenceTo>Account_Profile__c</referenceTo>
        <relationshipLabel>Current Product Preference</relationshipLabel>
        <relationshipName>B_L_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Current Product Preference</relationshipLabel>
        <relationshipName>B_L_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Annual_Volume__c</fullName>
        <label>Annual Volume</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Equipment_Age__c</fullName>
        <label>Equipment Age (Years)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <label>Product Family</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Retina</fullName>
                </value>
                <value>
                    <fullName>Cataract</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Product Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Standard Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>B&amp;L Products</relationshipLabel>
        <relationshipName>B_L_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Equipment</fullName>
                </value>
                <value>
                    <fullName>Laser Probe</fullName>
                </value>
                <value>
                    <fullName>DDMS</fullName>
                </value>
                <value>
                    <fullName>Soft tip</fullName>
                </value>
                <value>
                    <fullName>Oil</fullName>
                </value>
                <value>
                    <fullName>Disp Inst</fullName>
                </value>
                <value>
                    <fullName>Pack,  Needle, IA</fullName>
                </value>
                <value>
                    <fullName>Monofocal IOL</fullName>
                </value>
                <value>
                    <fullName>PIOL</fullName>
                </value>
                <value>
                    <fullName>Toric IOL</fullName>
                </value>
                <value>
                    <fullName>OVD</fullName>
                </value>
                <value>
                    <fullName>CTR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>B&amp;L Product</label>
    <nameField>
        <displayFormat>BL-PRO-{0000000000}</displayFormat>
        <label>BL Product Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>B&amp;L Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>